# content-extractor

./: .gitignore  CLAUDE.md  README.md  SKILL.md  capability.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-data-models/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-article-adapter/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-llm-infrastructure/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-image-adapter/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-video-core/: 05-01-PLAN.md  05-01-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
references/: README.md
src/content_extractor/: __init__.py  __main__.py  analysis.py  cli.py  config.py  extract.py  llm.py  loader.py  models.py  output.py  router.py  text_utils.py  vision.py
tests/: conftest.py  test_analysis.py  test_article_extractor.py  test_cli.py  test_config.py  test_extract.py  test_ffmpeg.py  test_gallery_extractor.py  test_hallucination.py  test_image_extractor.py  test_library_api.py  test_llm.py  test_loader.py  test_models.py  test_output.py  test_router.py  test_transcribe.py  test_video_extractor.py
tests/fixtures/: douyin_video.json  sample_article.html  wechat_article.json  x_video.json  xhs_video.json
(+27 files in other folders)
