[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-extractor"
version = "0.1.0"
description = "Turn raw multimedia content into structured text"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12",
    "orjson>=3.10",
    "typer>=0.24",
    "rich>=14.0",
    "trafilatura>=2.0,<3",
    "anthropic>=0.86,<1",
]

[project.scripts]
content-extractor = "content_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["content_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=content_extractor --cov-report=term-missing --no-header -q"

[tool.ruff]
target-version = "py313"
src = ["src"]
